--- a/Controle-Fatec.html
+++ b/Controle-Fatec.html
@@ -22,7 +22,7 @@
                 <li class="nav-item">
                   <button class="btn  btn-block btn-danger" onclick="logoutFirebase()">Logout</button>
                   <body>
-                    <img id="imge" src="imagens/fatec.png">
+                    <img id="imge" src="Imagens/fatec.png">
                     </body> 
                 </li>
             </ul>
